[project]
name = "claude-sdk-tutor"
version = "0.1.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.26",
    "platformdirs>=4.0.0",
    "textual>=7.5.0",
    "textual-dev>=1.8.0",
    "watchfiles>=1.1.1",
]

[project.scripts]
claude_sdk_tutor = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude", "app.py"]
